--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "next-intl": "^4.1.0",
     "react": "^18.3.1",
     "react-aria": "^3.39.0",
